Coinjoin rpc call, takes arguments tx, pubkey, tweak wallet checks that it owns pubkey, checks tx for sanity, and then signs the inputs it owns. Still a lot of work to do to make this useful.
